--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "@types/node": "^12.20.55",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
+    "@xstate/react": "^3.0.1",
     "framer-motion": "^6.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^3.11.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xstate": "^4.34.0"
   },
   "scripts": {
     "start": "react-scripts start",
